css/style.css
body {
  border: 1px solid gold;
}

h2 {
  text-align: center;
 /* transform: rotate(180deg);*/
  display: none;
}

h1 {
  /*transform: rotate(180deg);*/
}

#main {
  border: 1px solid gold;
  display: flex;
  /*width: 70%;*/
 /* flex-flow: column wrap;*/
  
  /*min-height: 90vh*/
}

#allPieceContainer {
  border: 2px;
  display: flex;
  flex-direction: column;


}

.checkerboardContainer {
  /*transform: rotate(180deg);*/
  border: 1px solid blue;
  width: 90%;
  display: flex;
  flex-wrap: wrap;
  min-width: 830px;
  max-width: 830px;
  justify-content: center;
  /*flex-grow: 1;*/ 
}

.redCheckerPieceContainer {
  border: 1px solid gold;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.blackCheckerPieceContainer {
  border: 1px solid gold;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.space {
  display: flex;
  flex-basis: 100px;
  border: 1px solid gray;
  align-items: center;
}

.pieces {
  display:flex;
  justify-content: center;
  align-items: center;

}

